src/main/resources/io/tackle/operator/templates/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: sso
    app.kubernetes.io/part-of: tackle
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ""
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ""
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: ""
        - name: theme-volume
          emptyDir: {}
      containers:
        - name: keycloak
          image: ""
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
            - name: theme-volume
              mountPath: /opt/jboss/keycloak/standalone/deployments
          readinessProbe:
            httpGet:
              path: /auth/realms/master
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /auth/realms/master
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 6
