src/main/resources/io/tackle/operator/templates/rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ""
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
  labels:
    app.kubernetes.io/component: rest
    app.kubernetes.io/version: 0.0.1-SNAPSHOT-native
    app.kubernetes.io/name: ""
    app.kubernetes.io/part-of: tackle
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: 0.0.1-SNAPSHOT-native
      app.kubernetes.io/name: ""
      app.kubernetes.io/part-of: tackle
  template:
    metadata:
      annotations:
        prometheus.io/port: "8080"
        prometheus.io/scheme: http
        prometheus.io/scrape: "true"
        prometheus.io/path: /q/metrics
      labels:
        app.kubernetes.io/component: rest
        app.kubernetes.io/version: 0.0.1-SNAPSHOT-native
        app.kubernetes.io/name: ""
        app.kubernetes.io/part-of: tackle
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: QUARKUS_DATASOURCE_USERNAME
              valueFrom:
                secretKeyRef:
                  name: ""
                  key: database-user
            - name: QUARKUS_DATASOURCE_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: ""
                  key: database-password
          image: ""
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: 
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: ""
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /controls/q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
