src/main/resources/io/tackle/operator/templates/ui-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ""
  labels:
    app.kubernetes.io/name: ""
    app.kubernetes.io/component: ui
    app.kubernetes.io/instance: ""
    app.kubernetes.io/part-of: tackle
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ""
      app.kubernetes.io/part-of: tackle
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ""
        app.kubernetes.io/part-of: tackle
    spec:
      containers:
        - name: ""
          image: ""
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - "[ -f /run/nginx.pid ] && ps -A | grep nginx"
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
