src/main/resources/io/tackle/operator/templates/postgresql-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ""
  labels:
    app.kubernetes.io/name: ""
    app.kubernetes.io/version: '10.6'
    app.kubernetes.io/component: database
    app.kubernetes.io/instance: ""
    app.kubernetes.io/part-of: tackle
spec:
  ports:
    - name: tcp
      protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app.kubernetes.io/name: ""
    app.kubernetes.io/version: '10.6'
  type: ClusterIP
  sessionAffinity: None
