src/main/resources/io/tackle/operator/templates/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ""
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
  labels:
    app.kubernetes.io/name: ""
    app.kubernetes.io/part-of: tackle
    app.kubernetes.io/version: 0.0.1-SNAPSHOT-native
    app.kubernetes.io/component: rest
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: ""
    app.kubernetes.io/part-of: tackle
    app.kubernetes.io/version: 0.0.1-SNAPSHOT-native
  type: ClusterIP
